# cpp-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Boot.h  Exceptions.h  Fish.h  Game.h  Sector.h
src/: Game.cpp  main.cpp
tests/: test_game.cpp
